apigate/tests/ui/fail/route_outside_service.rs
#[apigate::get("/items")]
async fn items() {}

fn main() {}
